--- a/gradle.properties
+++ b/gradle.properties
@@ -27,3 +27,13 @@ org.gradle.caching=true
 org.gradle.configureondemand=true
 android.enableComposeCompilerReports=false
 android.enableComposeCompilerMetrics=false
+android.defaults.buildfeatures.resvalues=true
+android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
+android.enableAppCompileTimeRClass=false
+android.usesSdkInManifest.disallowed=false
+android.uniquePackageNames=false
+android.dependency.useConstraints=true
+android.r8.strictFullModeForKeepRules=false
+android.r8.optimizedResourceShrinking=false
+android.builtInKotlin=false
+android.newDsl=false
