## 「新增」 - 全新应用图标 - 支持 English ## 「优化」 - 使用 `waitress` 提升服务器性能

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+
+      - name: Check Python version
+        run: python --version
+
       - name: Grant Gradle permission
         run: chmod +x ./gradlew
 
